--- a/manifest.json
+++ b/manifest.json
@@ -3,23 +3,21 @@
     "name": "LATAM Real Estate Chrome Extension",
     "version": "1.0",
     "description": "Automatically converts local currencies (Colombian Peso COP for now) to USD",
-    "permissions": ["activeTab", "scripting", "storage"],
-    "action": {
-        "default_popup": "popup.html"
+    "permissions": [
+      "storage",
+      "activeTab",
+      "scripting",
+      "tabs"
+    ],
+    "host_permissions": [
+      "https://primaverarealtymedellin.com/*"
+    ],
+    "action": {},
+    "background": {
+      "service_worker": "background.js"
     },
     "content_scripts": [{
-        "matches": [
-            "*://*.casacol.co/*",
-            "*://primaverarealtymedellin.com/*",
-            "*://www.realtor.com/international/co/*",
-            "*://www.ciencuadras.com/*"
-        ],
-        "js": [
-            "areaUtils.js",
-            "content.js"
-        ]
-    }],
-    "background": {
-        "service_worker": "background.js"
-    }
+      "matches": ["https://primaverarealtymedellin.com/*"],
+      "js": ["content.js"]
+    }]
 }
