--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
             "*://www.ciencuadras.com/*"
         ],
         "js": [
-            "areaUtils.js",
+            "utils.js",
             "content.js"
         ]
     }],
