temp, adding nomadbarrio

--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
         "matches": [
             "*://*.casacol.co/*",
             "*://primaverarealtymedellin.com/*",
+            "*://nomadbarrio.com/*",
             "*://www.realtor.com/international/co/*",
             "*://www.ciencuadras.com/*"
         ],
